--- a/javascript-html/exemplos/primeiro_teste.html
+++ b/javascript-html/exemplos/primeiro_teste.html
@@ -10,7 +10,34 @@
     <br />
     <a href="https://www.linkedin.com/in/rvsfara/">Meu LinkedIn</a>
     <script type="text/javascript">
-        alert("Caixa de alerta");
+        document.write("<h1>Seja bem-vindo</h1>");
+        //alert("Rafael Data de Nascimento 21/09/1991");
+        document.write("<br />");
+        document.write("A idade do Rafael é 31");
+        document.write("<br />");
+        document.write("18 - 2 é: ");
+        document.write(18 - 2);//16
+        document.write("<br />");
+        document.write("18 + 20 é: ");
+        document.write(18 + 20);//38
+        document.write("<br />");
+        document.write("18 * 2 é: ");
+        document.write(18 * 20);//360
+        document.write("<br />");
+        document.write("18 / 2 é: ");
+        document.write(18 / 2);//9
+        document.write("<br />");
+        document.write("concatenando as strings 19 e 91: ");
+        document.write("19" + "91");//1991
+        document.write("<br />");
+        document.write("concatenando string 19 e numero 91 fica: ");
+        document.write("19" + 91);//1991
+        document.write("<br />");
+        document.write("Rafael nasceu em");
+        document.write(2022 - 31);
+        document.write("<br />");
+        document.write("Média: "+(20 + 10 + 30)/3);
+
     </script>
 </body>
 
