--- a/javascript-html/exemplos/primeiro_teste.html
+++ b/javascript-html/exemplos/primeiro_teste.html
@@ -10,6 +10,7 @@
     <br />
     <a href="https://www.linkedin.com/in/rvsfara/">Meu LinkedIn</a>
     <script type="text/javascript">
+        var ano = 2022;
         document.write("<h1>Seja bem-vindo</h1>");
         //alert("Rafael Data de Nascimento 21/09/1991");
         document.write("<br />");
@@ -34,9 +35,11 @@
         document.write("19" + 91);//1991
         document.write("<br />");
         document.write("Rafael nasceu em");
-        document.write(2022 - 31);
+        document.write(ano - 31);
         document.write("<br />");
+        document.write("Rafael tem " + (ano - 1991) + " anos"+"<br />");
         document.write("Média: "+(20 + 10 + 30)/3);
+
 
     </script>
 </body>
