--- a/javascript-html/exemplos/primeiro_teste.html
+++ b/javascript-html/exemplos/primeiro_teste.html
@@ -39,8 +39,17 @@
         document.write("<br />");
         document.write("Rafael tem " + (ano - 1991) + " anos"+"<br />");
         document.write("Média: "+(20 + 10 + 30)/3);
-
-
+        var tabuada = 8;
+        document.write(tabuada + " vezes 1 é " + tabuada * 1 + "<br>");
+        document.write(tabuada + " vezes 2 é " + tabuada * 2 + "<br>");
+        document.write(tabuada + " vezes 3 é " + tabuada * 3 + "<br>");
+        document.write(tabuada + " vezes 4 é " + tabuada * 4 + "<br>");
+        document.write(tabuada + " vezes 5 é " + tabuada * 5 + "<br>");
+        document.write(tabuada + " vezes 6 é " + tabuada * 6 + "<br>");
+        document.write(tabuada + " vezes 7 é " + tabuada * 7 + "<br>");
+        document.write(tabuada + " vezes 8 é " + tabuada * 8 + "<br>");
+        document.write(tabuada + " vezes 9 é " + tabuada * 9 + "<br>");
+        document.write(tabuada + " vezes 10 é " + tabuada * 10 + "<br>");
     </script>
 </body>
 
