--- a/javascript-html/exemplos/primeiro_teste.html
+++ b/javascript-html/exemplos/primeiro_teste.html
@@ -50,6 +50,8 @@
         document.write(tabuada + " vezes 8 é " + tabuada * 8 + "<br>");
         document.write(tabuada + " vezes 9 é " + tabuada * 9 + "<br>");
         document.write(tabuada + " vezes 10 é " + tabuada * 10 + "<br>");
+        var media = (39 + 20 + 41)/3;
+        document.write('A média das idades é ' + Math.round(media));//arredondar
     </script>
 </body>
 
